# leeg-eval

./: .env.example  .gitignore  README.md  conftest.py  models.py  pyproject.toml  requirements.txt  run_eval.py
.claude/: settings.json
judges/: rubric_judge.j2
optimizers/: comparator.py  experiment_runner.py
reports/: reporter.py
runners/: batch_runner.py  single_runner.py
scorers/: deterministic.py  llm_judge.py
test_sets/: lineup_flows.jsonl  security_flows.jsonl  sms_flows.jsonl
tests/: test_runners.py  test_scorers.py
